# ai_demo

./: pyproject.toml
ai_demo/: demo.py
myserve/: README.md  pyproject.toml
